web/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-manager-service
  namespace: home-manager
spec:
  selector:
    app: home-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
